--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack/prod.js ",
+    "deploy": "node deploy.js", 
     "start": "webpack-dev-server --config webpack/base.js --open"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "phaser": "^3.16.2"
   }
 }
